fixed form alignment

--- a/css/main.css
+++ b/css/main.css
@@ -456,11 +456,13 @@ textarea {
 
 label {
   margin-bottom: 10px;
+  margin-left: 10px;
   display: block; }
 
 input {
   display: block;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  margin-left: 10px; }
 
 select {
   display: block;
@@ -472,8 +474,7 @@ select {
 
 .demoSection {
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/b/bb/Alternative_Energies.jpg");
-  background-size: cover;
-  height: 90vh; }
+  background-size: cover; }
   .demoSection h1 {
     margin: 0;
     padding-top: 5px;
@@ -497,7 +498,8 @@ select {
   color: white; }
 
 .demoFormAlign {
-  display: inline-block;
+  display: flex;
+  justify-content: space-between;
   margin-left: 10px; }
 
 .green {
