--- a/css/sass/classes.scss
+++ b/css/sass/classes.scss
@@ -101,11 +101,14 @@
 
 label {
   margin-bottom:10px;
+  margin-left: 10px;
   display: block;
+
 }
 input {
   display: block;
   margin-bottom: 10px;
+  margin-left:10px;
 }
 select {
   display: block;
@@ -120,7 +123,6 @@ select {
 .demoSection {
   background-image: url('https://upload.wikimedia.org/wikipedia/commons/b/bb/Alternative_Energies.jpg');
   background-size: cover;
-  height: 90vh;
   h1 {
     margin: 0;
     padding-top: 5px;
@@ -149,7 +151,8 @@ select {
 }
 
 .demoFormAlign {
-  display: inline-block;
+  display:flex;
+  justify-content: space-between;
   margin-left: 10px;
 }
 
